--- a/styles.css
+++ b/styles.css
@@ -40,7 +40,9 @@ nav a:hover {
 }
 
 .logo {
-  max-width: 100%;
-  height: auto;
+  width: 30%;        
+  max-width: 300px;  
+  height: auto;     
   display: block;
-  margin: 0 auto 10px auto;
+  margin: 0 auto 20px auto; 
+}
