--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@ body, html {
 }
 
 header, footer {
-    background-color: #333;
+    background-color:#a9cbb7;
     color: #fff;
     text-align: center;
     padding: 10px 0;
@@ -45,4 +45,8 @@ nav a:hover {
   height: auto;     
   display: block;
   margin: 0 auto 20px auto; 
+}
+
+footer {
+    background-color: #c96e49;
 }
