--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@ body, html {
 }
 
 header {
-  background-color: #a9cbb7; /* soft sage green */
+  background-color: #a9cbb7; 
   padding: 1em 0;
   text-align: center;
   color: #2f4f2f; /* deep olive text */
