--- a/styles.css
+++ b/styles.css
@@ -58,6 +58,15 @@ main {
   line-height: 1.6;
 }
 
+h1 {
+  font-size: 2.5rem;
+  color: #2f4f2f; 
+  font-weight: 600;
+  text-align: center;
+  margin-bottom: 1em;
+  letter-spacing: 0.5px;
+  font-family: 'Georgia', serif; 
+}
 
 .float-img {
   width: 40%;
