--- a/styles.css
+++ b/styles.css
@@ -68,22 +68,18 @@ h1 {
   font-family: 'Georgia', serif; 
 }
 
-.float-img {
-  width: 40%;
-  max-width: 300px; 
-  height: auto;
+.float-image {
   float: left;
-  margin: 0 1em 1em 0;
-  border-radius: 8px;
+  width: 30%;
+  max-width: 400px;
+  height: auto;
+  margin: 0 20px 20px 0;
 }
 
-.float-img-bottom {
-  float: right;
-  width: 30%;
-  max-width: 500px;
-  height: auto;
-  margin: 0 0 1em 1em;
-  border-radius: 8px;
+.float-wrapper::after {
+  content: "";
+  display: table;
+  clear: both;
 }
 
 /* Footer */
