--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 html, body {
   height: 100%;
-  margin: 0;
-  padding: 0;
+   margin: 0 auto;
+  padding: 0 10%;
   font-family: 'Segoe UI', sans-serif;
   background-color: #f5f1e5;
   color: #2f4f2f;
