--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 html, body {
   height: 100%;
-   margin: 0 auto;
+   margin: 10%;
   padding: 0 10%;
   font-family: 'Segoe UI', sans-serif;
   background-color: #f5f1e5;
