--- a/styles.css
+++ b/styles.css
@@ -1,127 +1,57 @@
 html, body {
-  height: 100%;
-  margin: 10%;
-  padding: 0 10%;
-  font-family: 'Segoe UI', sans-serif;
-  background-color: #f5f1e5;
-  color: #2f4f2f;
-  display: flex;
-  flex-direction: column;
+  margin: 0;
+  padding: 0;
+  font-family: 'Verdana', sans-serif;
+  background-color: #f7faf5;
+  color: #355e3b;
 }
 
 header {
-  background-color: #a9cbb7;
-  padding: 1em 0;
+  background-color: #a8d5ba;
   text-align: center;
-  color: #2f4f2f;
+  padding: 1em;
 }
 
 .logo {
-  width: 30%;
-  max-width: 300px;
+  width: 200px;
   height: auto;
   display: block;
-  margin: 0 auto 20px auto;
-}
-
-.hands {
-  width: 25%;
-  max-width: 175px;
+  margin: 0 auto;
 }
 
 nav ul {
-  list-style-type: none;
-  margin: 0;
+  list-style: none;
   padding: 0;
   display: flex;
-  gap: 1.5em;
   justify-content: center;
-  flex-wrap: wrap;
+  gap: 2em;
+  margin-top: 1em;
 }
 
 nav a {
   text-decoration: none;
-  color: #2f4f2f;
+  color: #355e3b;
   font-weight: bold;
-  font-size: 1.1rem;
 }
 
 nav a:hover {
-  text-decoration: underline;
+  color: #2c5234;
 }
 
 main {
-  flex: 1;
   padding: 2em;
-  margin: 0 10%;
-  font-size: 1.1rem;
-  line-height: 1.6;
+  text-align: center;
 }
 
 h1 {
   font-size: 2.5rem;
-  color: #2f4f2f;
-  font-weight: 600;
-  text-align: center;
   margin-bottom: 1em;
-  letter-spacing: 0.5px;
-  font-family: 'Georgia', serif;
-}
-
-.float-image {
-  float: left;
-  width: 30%;
-  max-width: 400px;
-  height: auto;
-  margin: 0 20px 20px 0;
-}
-
-.float-wrapper::after {
-  content: "";
-  display: table;
-  clear: both;
 }
 
 footer {
-  background-color: #c96e49;
-  padding: 1.5em 0;
+  background-color: #8fbc8f;
+  color: #ffffff;
   text-align: center;
-  color: #fffbe6;
-  margin-top: auto;
-}
-
-.social-icon {
-  width: 30px;
-  height: 30px;
-  margin: 0 10px;
-  vertical-align: middle;
-}
-
-/* Simple Mobile Responsiveness */
-@media (max-width: 768px) {
-  html, body {
-    margin: 5%;
-    padding: 0 5%;
-  }
-
-  nav ul {
-    flex-direction: column;
-    align-items: center;
-  }
-
-  .logo {
-    width: 50%;
-  }
-
-  main {
-    margin: 0 5%;
-    padding: 1em;
-  }
-
-  .float-image {
-    float: none;
-    display: block;
-    margin: 0 auto 20px auto;
-    width: 80%;
-  }
+  padding: 1.5em 0;
+  margin-top: 2em;
 }
