--- a/styles.css
+++ b/styles.css
@@ -63,6 +63,13 @@ footer {
   padding: 1.5em 0;
   margin-top: 2em;
 }
+footer img {
+  width: 30px;
+  height: 30px;
+  object-fit: contain;
+  margin: 0 10px;
+  vertical-align: middle;
+}
 
 img {
   max-width: 100%;
