--- a/styles.css
+++ b/styles.css
@@ -78,3 +78,10 @@ img {
   display: block;
   margin: 1em auto;
 }
+.small-image {
+  width: 300px;
+  height: auto;
+  display: block;
+  margin: 20px auto;
+  border-radius: 10px;
+}
