--- a/styles.css
+++ b/styles.css
@@ -14,8 +14,8 @@ header {
 }
 
 .logo {
-  width: 200px;
-  height: auto;
+  width: height;
+  height: 200px;
   display: block;
   margin: 0 auto;
 }
